Add extra testing methods for K-Means and GMM

--- a/machine_learning_clustering.ipynb
+++ b/machine_learning_clustering.ipynb
@@ -21,7 +21,10 @@
     "from sklearn.cluster import MeanShift\n",
     "from sklearn.metrics import silhouette_score\n",
     "from sklearn.neighbors import NearestNeighbors\n",
-    "from sklearn.cluster import MeanShift, estimate_bandwidth"
+    "from sklearn.cluster import MeanShift, estimate_bandwidth\n",
+    "from kneed import KneeLocator\n",
+    "from sklearn.metrics import pairwise_distances\n",
+    "from sklearn.metrics import pairwise_distances_argmin_min"
    ]
   },
   {
@@ -881,12 +884,13 @@
     "data_preprocessed = preprocessor.fit_transform(df_kmeans)\n",
     "# Example: Determining the optimal number of clusters using silhouette score\n",
     "range_n_clusters = range(2, 11)\n",
-    "best_n_clusters = 2\n",
+    "best_n_clusters = 1\n",
     "best_score = -1\n",
     "for n_clusters in range_n_clusters:\n",
     "    kmeans = KMeans(n_clusters=n_clusters, random_state=42)\n",
     "    kmeans.fit(data_preprocessed)\n",
     "    score = silhouette_score(data_preprocessed, kmeans.labels_)\n",
+    "    print(f\"Number of clusters: {n_clusters}, Silhouette Score: {score}\")\n",
     "    if score > best_score:\n",
     "        best_score = score\n",
     "        best_n_clusters = n_clusters\n",
@@ -894,6 +898,67 @@
     "print(\n",
     "    f\"Optimal number of clusters: {best_n_clusters} with a silhouette score of {best_score}\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gap_statistic(X, nrefs=20, max_clusters=10):\n",
+    "    # Generate random reference datasets\n",
+    "    shape = X.shape\n",
+    "    tops = X.max(axis=0)\n",
+    "    bots = X.min(axis=0)\n",
+    "    rands = np.random.rand(nrefs, shape[0], shape[1])\n",
+    "    refs = np.zeros_like(rands)\n",
+    "\n",
+    "    for i in range(nrefs):\n",
+    "        refs[i] = rands[i] * (tops - bots) + bots\n",
+    "\n",
+    "    gaps = np.zeros(max_clusters)\n",
+    "    results_list = []\n",
+    "\n",
+    "    for k in range(1, max_clusters + 1):\n",
+    "        km = KMeans(n_clusters=k)\n",
+    "        km.fit(X)\n",
+    "\n",
+    "        # Dispersion for real data\n",
+    "        dists = np.mean(\n",
+    "            np.min(pairwise_distances_argmin_min(X, km.cluster_centers_)[1])\n",
+    "        )\n",
+    "        log_dists = np.log(dists)\n",
+    "\n",
+    "        # Dispersion for reference data\n",
+    "        ref_dists = np.zeros(nrefs)\n",
+    "        for i in range(nrefs):\n",
+    "            km.fit(refs[i])\n",
+    "            ref_dists[i] = np.mean(\n",
+    "                np.min(pairwise_distances_argmin_min(refs[i], km.cluster_centers_)[1])\n",
+    "            )\n",
+    "        log_ref_dists = np.log(ref_dists)\n",
+    "\n",
+    "        gap = np.mean(log_ref_dists) - log_dists\n",
+    "        gaps[k - 1] = gap\n",
+    "\n",
+    "        results_list.append({\"clusterCount\": k, \"gap\": gap})\n",
+    "\n",
+    "    resultsdf = pd.DataFrame(results_list)\n",
+    "\n",
+    "    return gaps, resultsdf\n",
+    "\n",
+    "\n",
+    "# Use your preprocessed data\n",
+    "data_preprocessed = preprocessor.fit_transform(df_kmeans)\n",
+    "\n",
+    "gaps, resultsdf = gap_statistic(data_preprocessed, max_clusters=10)\n",
+    "optimalK = KneeLocator(\n",
+    "    range(1, len(gaps) + 1), gaps, curve=\"convex\", direction=\"decreasing\"\n",
+    ").knee\n",
+    "\n",
+    "print(f\"Optimal number of clusters: {optimalK}\")\n",
+    "print(resultsdf)"
    ]
   },
   {
@@ -2711,6 +2776,67 @@
     "plt.ylabel(\"BIC\")\n",
     "plt.title(\"BIC vs. Number of Components\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gap_statistic_gmm(X, nrefs=10, max_clusters=10):\n",
+    "    # Generate random reference datasets\n",
+    "    shape = X.shape\n",
+    "    tops = X.max(axis=0)\n",
+    "    bots = X.min(axis=0)\n",
+    "    rands = np.random.rand(nrefs, shape[0], shape[1])\n",
+    "    refs = np.zeros_like(rands)\n",
+    "\n",
+    "    for i in range(nrefs):\n",
+    "        refs[i] = rands[i] * (tops - bots) + bots\n",
+    "\n",
+    "    gaps = np.zeros(max_clusters)\n",
+    "    results_list = []\n",
+    "\n",
+    "    for k in range(1, max_clusters + 1):\n",
+    "        gmm = GaussianMixture(n_components=k, random_state=42)\n",
+    "        gmm.fit(X)\n",
+    "        labels = gmm.predict(X)\n",
+    "\n",
+    "        # Dispersion for real data\n",
+    "        dists = np.mean(np.min(pairwise_distances(X, gmm.means_), axis=1))\n",
+    "        log_dists = np.log(dists)\n",
+    "\n",
+    "        # Dispersion for reference data\n",
+    "        ref_dists = np.zeros(nrefs)\n",
+    "        for i in range(nrefs):\n",
+    "            gmm.fit(refs[i])\n",
+    "            labels_ref = gmm.predict(refs[i])\n",
+    "            ref_dists[i] = np.mean(\n",
+    "                np.min(pairwise_distances(refs[i], gmm.means_), axis=1)\n",
+    "            )\n",
+    "        log_ref_dists = np.log(ref_dists)\n",
+    "\n",
+    "        gap = np.mean(log_ref_dists) - log_dists\n",
+    "        gaps[k - 1] = gap\n",
+    "\n",
+    "        results_list.append({\"clusterCount\": k, \"gap\": gap})\n",
+    "\n",
+    "    resultsdf = pd.DataFrame(results_list)\n",
+    "\n",
+    "    return gaps, resultsdf\n",
+    "\n",
+    "\n",
+    "# Use your preprocessed data\n",
+    "data_preprocessed = preprocessor.fit_transform(df_gmm)\n",
+    "\n",
+    "gaps, resultsdf = gap_statistic_gmm(data_preprocessed, max_clusters=10)\n",
+    "optimalK = KneeLocator(\n",
+    "    range(1, len(gaps) + 1), gaps, curve=\"convex\", direction=\"decreasing\"\n",
+    ").knee\n",
+    "\n",
+    "print(f\"Optimal number of clusters: {optimalK}\")\n",
+    "print(resultsdf)"
    ]
   },
   {
